# X-AnyLabeling

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CITATION.cff  CLA.md  CONTRIBUTING.md  MANIFEST.in  README.md  README_ja-JP.md  README_us-EN.md  README_zh-CN.md  SECURITY.md  anylabeling-linux-cpu.spec  anylabeling-linux-gpu.spec  anylabeling-win-cpu.spec  anylabeling-win-gpu.spec  anylabeling.spec  pyproject.toml  requirements-dev.txt  requirements-gpu-dev.txt  requirements-gpu.txt  requirements-macos-dev.txt  requirements-macos.txt  requirements.txt  setup.py  x-anylabeling-linux-cpu.spec  x-anylabeling-linux-gpu.spec  x-anylabeling-macos.spec  x-anylabeling-win-cpu.spec  x-anylabeling-win-gpu.spec  x-anylabeling.desktop
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  20_feature_request.yml  30_model_request.yml  40_general_question.yml  config.yml
.github/workflows/: build-release.yml  python-publish.yml  release.yml  sync-website-content.yml
anylabeling/: README.md  __init__.py  app.py  app_info.py  checks.py  cli_export.py  config.py  diagnostics.py  qt_compat.py  utils.py
anylabeling/configs/: anylabeling_config.yaml  line_color.code-search  models-Copy1.yaml  models.yaml  xanylabeling_config.yaml
anylabeling/configs/.ipynb_checkpoints/: models-checkpoint.yaml  xanylabeling_config-checkpoint.yaml
anylabeling/resources/: resources.py  resources.qrc
anylabeling/views/: mainwindow.py
assets/: Giraffes_at_west_midlands_safari_park.json  attributes.json  classes.txt  demo.json  labels.txt  mask_color_map.json  mask_grayscale_map.json  vlm_r1_ovd.jsonl  yolov8_pose.yaml
assets/Annotations/: demo.xml
assets/MOT/: demo_video.csv  det.txt  gt.txt  seqinfo.ini
assets/ODVG/: label_map.json  od.json
assets/annotations/: coco_detection.json  coco_instance_segmentation.json  coco_keypoints.json
assets/attributes/: person_attributes.json  vehicle_attributes.json
assets/examples/: demo_license_plate.png:Zone.Identifier
assets/labelTxt/: demo_obb.txt
assets/labels/: demo.txt
assets/ppocr/: Label.txt  rec_gt.txt
docs/: Q&A.md  custom_model.md  models_list.md  pyqt6_adaptation_checklist.md  site.yml
docs/en/: changelog.md  chatbot.md  cli.md  custom_model.md  get_started.md  image_classifier.md  model_zoo.md  paddle_ocr.md  user_guide.md  video_classifier.md  vqa.md
docs/zh_cn/: chatbot.md  cli.md  custom_model.md  faq.md  feature_matrix.md  get_started.md  image_classifier.md  model_zoo.md  paddle_ocr.md  user_guide.md  video_classifier.md  vqa.md
examples/depth_estimation/: README.md
examples/interactive_video_object_segmentation/: README.md
examples/multiple_object_tracking/: README.md  classes.txt
examples/pose_estimation/: README.md
examples/segmentation/: README.md
models/: fix_where_broadcast.py
scripts/: build_and_publish_pypi.sh  build_executable.sh  check_model_url_accessible.py  compile_languages.py  format_code.sh  generate_languages.py  generate_release_notes.py  zip_models.py
tests/: conftest.py  test_auto_labeling_layout.py  test_autolabeling_contract.py  test_brightness_contrast_dialog.py  test_brightness_contrast_dialog_modes.py  test_canvas_qt.py  test_chatbot_offline.py  test_cli.py  test_config.py  test_converter_roundtrip.py  test_device_manager.py  test_diagnostics.py  test_label_dialog_qt.py  test_label_list_widget.py  test_label_loop_review.py  test_label_widget_brush_mode.py  test_label_widget_metrics.py  test_labeling_widget_qt.py  test_labeling_workflow_qt.py  test_optional_webengine.py  test_pyqt6_smoke.py  test_qt_compat.py  test_toolbar_layout.py  test_training_dryrun.py  test_vqa_offline.py
tests/fixtures/: sample_data.py
tests/segment_everything/: test_amg.py  test_mask_shapes.py  test_point_batches.py
tests/test_auto_labeling/: test_layout.py
tests/test_canvas/: test_brush_drawing.py  test_brush_edit.py  test_cuboid_interaction.py  test_groups.py  test_rotation_handle.py  test_shape_lock.py  test_vertex_eraser.py
tests/test_chatbot/: test_minimax_integration.py  test_minimax_provider.py
tests/test_config/: test_normalization.py
tests/test_labeling/: test_chatbot_provider.py  test_kie_linking.py  test_label_file_load.py  test_label_file_save.py  test_label_loop_review.py  test_label_widget_attributes.py  test_label_widget_groups.py  test_pillow_limits.py  test_upload_shape_attributes.py  test_video_classifier_sidecar.py  test_video_classifier_workers.py
tests/test_models/: rmbg_v_1_4.py  test_auto_labeling_registry.py  test_model_check.py  test_model_download.py  test_ppocr_v4.py  test_ppocr_v6.py  test_scrfd.py  test_segment_anything_3.py  test_yolo26_track.py  test_yoloe.py
tests/test_ppocr/: test_latex_editor.py  test_pipeline_task_mapping.py  test_preview_canvas.py  test_recents_list_widget.py  test_result_action_icons.py  test_style.py  test_table_editor.py
tests/test_settings/: test_controller.py  test_dialog_layout.py  test_runtime_applier.py  test_schema.py
tests/test_utils/: test_canvas_groups.py  test_canvas_shape_lock.py  test_canvas_shape_selection.py  test_file_search.py  test_general.py  test_image.py  test_label_converter.py  test_qt.py  test_visualization.py
tests/test_widgets/: test_brightness_contrast_dialog.py  test_canvas_adjustment.py
tools/: export_grounding_dino_onnx.py  export_internimage_model_onnx.py  export_pulc_attribute_model_onnx.py  export_recognize_anything_model_onnx.py  export_yolov10_onnx.py  export_yolov8_obb_onnx.py  export_yolow_onnx.py  label_converter.py  label_converter_dev.py  label_drawer.py  polygon_mask_conversion.py  run_tests.py
tools/onnx_exporter/: export_deimv2_onnx.py  export_dfine_onnx.py  export_geco_onnx.py  export_grounding_dino_onnx.py  export_internimage_model_onnx.py  export_recognize_anything_model_onnx.py  export_rfdetr_onnx.py  export_rfdetr_seg_onnx.py  export_sam3_onnx.py  export_scrfd_onnx_demo.py  export_u_rtdetr_onnx.py  export_yolov10_onnx.py  export_yolov8_obb_onnx.py  export_yolow_onnx.py
(+753 files in other folders)
